<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/changepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Main"
        android:fontFamily="@font/covered_by_your_grace"
        android:onClick="loginPage"
        android:text="@string/changepass"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstpass"
        app:layout_constraintVertical_bias="0.635"
        tools:ignore="OnClick" />

    <EditText
        android:id="@+id/firstpass"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:ems="10"
        android:fontFamily="@font/covered_by_your_grace"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@color/Main"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/secondpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/secondpass"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:fontFamily="@font/covered_by_your_grace"
        android:hint="@string/passagain"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@color/Main"
        app:layout_constraintBottom_toTopOf="@+id/changepass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:fontFamily="@font/covered_by_your_grace"
        android:onClick="showPassLogin"
        android:text="@string/showpass"
        android:textColor="@color/Main"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/changepass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondpass"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="OnClick" />

    <EditText
        android:id="@+id/changepassusername"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:ems="10"
        android:fontFamily="@font/covered_by_your_grace"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColor="@color/Main"
        app:layout_constraintBottom_toTopOf="@+id/firstpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>